<resources>

    <string-array name="blood_types">
        <item>Pilih Golongan Darah</item>
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>

    <string-array name="gender">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="profile_choose">
        <item>Nama Anam</item>
        <item>Nama Anam</item>
    </string-array>

    <string name="app_name">BuahHati</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="name">Your Full Name\n</string>
    <string name="string_hint_name">Your Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="title_login_page">Login</string>
    <string name="login">Login\n</string>
    <string name="string_title_register_anak">Masukan Data Diri Si Kecil</string>
    <string name="string_nama_anak_regis">Nama Lengkap</string>
    <string name="tanggal_lahir_regis">Tanggal Lahir</string>
    <string name="string_tv_jeniskelamin">Jenis Kelamin</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="tv_data_kelahiran">Data Kelahiran</string>
    <string name="berat_badan_saat_lahir_kg">Berat Badan saat lahir (kg)</string>
    <string name="tinggi_badan_saat_lahir_cm">Tinggi Badan saat lahir (cm)</string>
    <string name="lingkar_kepala_saat_lahir_cm">Lingkar Kepala saat lahir (cm)</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_home">Heyy, Selamat Datang</string>
    <string name="tv_tambah_data_pertumbuhan">Tambah Data Pertumbuhan</string>
    <string name="hint_tanggal_pertumbuhan">Tanggal Pertumbuhan</string>
    <string name="hint_umur_anak_bulan">Umur Anak (bulan) *</string>
    <string name="hint_berat_badan_kg">Berat Badan (kg) *</string>
    <string name="hint_tinggi_badan_cm">Tinggi Badan (cm) *</string>
    <string name="sv_data_pertumbuhan">Simpan Data</string>
    <string name="title_welcome_page">Welcome To Buah Hati</string>
    <string name="message_welcome_page">Nikmati kemudahan dalam memantau pertumbuhan Si Kecil. Buah Hati dapat membantu anda memantau pertumbuhan Si Kecil dari mana saja dan kapan saja.</string>
    <string name="tv_data_pertumbuhan">Data Pertumbuhan</string>
    <string name="tv_nama_ortu">Nama Orang Tua</string>
    <string name="profile_orang_tua">Profile Orang Tua</string>
    <string name="tv_nama_anak">Nama Anak</string>
    <string name="profile_orang_anak">Profile anak</string>
    <string name="nama_anak">Nama Anak</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="berat_badan_anak">Berat Badan Anak</string>
    <string name="tinggi_lahir">Tinggi Badan Anak</string>
    <string name="lingkar_kepala">Lingkar Kepala Anak</string>
    <string name="golongan_darah_anak">Golongan Darah Anak</string>
    <string name="invalid_email">Your email is invalid \n</string>
    <string name="invalid_password">Your password is less than 8 characters</string>

    <string name="Marno_Gombloh">Marno Gombloh</string>
    <string name="bt_add_anak">Tambah Anak</string>
    <string name="desc_anak">26 Agustus 2005</string>

    <string name="tv_hope">Semoga Si Kecil dalam keadaan sehat ya :)</string>
    <string name="tv_riwayat">Riwayat Pertumbuhan</string>
    <string name="tv_informasi">Informasi</string>
    <string name="tgl_tumbuh">Tanggal Pertumbuhan</string>
    <string name="tv_hasil_analisis">Hasil Analisis</string>
    <string name="tv_pantau_pertumbuhan">Pantau Pertumbuhan</string>
    <string name="judulChart">Hasil Analisis\n</string>
    <string name="success">Success</string>
    <string name="continue_message">Continue</string>
    <string name="error_message">Error, there is something wrong</string>
    <string name="hint_lingkar_cm">Lingkar Kepala(cm)</string>
    <string name="username">Username</string>
    <string name="input_email">Please input your email!</string>
    <string name="input_password">Please input your password!</string>
    <string name="welcome_message">"Hey, Selamat Datang ! "</string>
    <string name="title_menu_1">"Selamat Datang di Buah Hati "</string>
    <string name="desc_menu_1">Aplikasi monitoring pertumbuhan Si Kecil yang mudah digunakan dan dapat dengan mudah diakses dimana saja dan kapan saja</string>
    <string name="title_menu_2">Pantau Pertumbuhan Si Kecil Dengan Mudah</string>
    <string name="desc_menu_2">Tidak perlu repot untuk memantau pertumbuhan Si Kecil. Cukup masukan data dan Buah Hati akan memperlihatkan kondisi pertumbuhannya.</string>
    <string name="title_menu_3">Informasi Yang Mudah Dipahami</string>
    <string name="desc_menu_3">Informasi pertumbuhan di tampilkan dalam bentuk grafik dan interpretasi hasil yang dapat dengan mudah dipahami. Anda tidak perlu bingung untuk membaca kondisi pertumbuhan Si Kecil</string>
    <string name="title_menu_4">Dapatkan Saran Nutrisi</string>
    <string name="desc_menu_4">Buah Hati juga memberikan rekomendari asupan nutrisi yang cocok untuk Si Kecil sesuai dengan kondisi pertumbuhannya.</string>
    <string name="start_now">Start Now</string>
    <string name="logout">Logout</string>
    <string name="are_your_sure">Are You Sure?</string>
    <string name="add_data_pertumbuhan">Tambah Data Pertumbuhan</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
    <string name="gizi_anak">Gizi Anak</string>
</resources>