<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.fragment_home.InputPertumbuhanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_tambah_data_pertumbuhan"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <Spinner
                    android:id="@+id/spAdditionalProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:entries="@array/blood_types"
                    android:padding="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <EditText
                    android:id="@+id/etTgl_tumbuh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/hint_tanggal_pertumbuhan"
                    android:onClick="showDatePicker" />

                <EditText
                    android:id="@+id/etUmur_tumbuh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:editable="false"
                    android:hint="@string/hint_umur_anak_bulan"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/etBerat_tumbuh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_berat_badan_kg"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/etTinggi_tumbuh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_tinggi_badan_cm"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/etLingkar_tumbuh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_lingkar_cm"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/btnSave_tumbuh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/pink"
            android:onClick="simpanDataPertumbuhan"
            android:text="@string/sv_data_pertumbuhan"
            android:textColor="@color/black" />

    </LinearLayout>


</FrameLayout>