<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.fragment_home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top Header -->
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FF4081"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_home"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/greeting"
                android:layout_marginTop="8dp"
                android:text="@string/tv_hope"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text= "@string/tv_data_pertumbuhan"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnBB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imageBtnBB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_berat" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnTB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imageBtnTB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_tinggi" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnLK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imgBtnLK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_lingkar_kepala" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text= "@string/tv_riwayat"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add_profile"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:alpha="0"
            android:backgroundTint="@color/pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:alpha="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text= "@string/tv_informasi"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>